# early-dementia-detection

./: .gitignore  Makefile  README.md  REGRESSAO_LOGISTICA_TIHM.ipynb  pyproject.toml
data/processed/: test_data.csv  train_data.csv  val_data.csv
data/raw/: Demographics.csv  Labels.csv  Physiology.csv
models/: Perceptron_model.pkl  SVM_model.pkl  XGBoost_model.pkl  best_RL_model.pkl  dementia_ann_best_model.pth  gaussian_nb_smote_combined.pkl
notebooks/: CatBoost.ipynb  Comparando_os_modelos.ipynb  REGRESSAO_LOGISTICA_TIHM.ipynb  SVM.ipynb  VALIDAÇAO_CRUZADA_ANINHADA_EXEMPLO_REGRESSAO_LOGISTICA_TIHM-3.ipynb  XGBoost.ipynb  eda_preprocessing_and_splits.ipynb  variables_pres_processing.ipynb
notebooks/models/: binary-model-NaiveBayes.ipynb  binary-model-Perceptron.ipynb
reports/figures/: Idade.eps  frequencia cardiaca no sono.eps  frequencia cardiaca.eps  peso.eps  pressao diastolica.eps  temperatura da pele.eps
reports/figures/eps/: Eventos-Adversos.eps  roncos .eps  temperatura.eps
utils/: data_utils.py  vis_utils.py
