[tool.poetry]
name = "early-dementia-detection"
version = "0.0.1"
description = "Machine learning models for early dementia detection"
authors = ["Mateus Balda <mateusbalda89@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.7"
numpy = "^2.3.3"
pandas = "^2.3.3"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
